<resources>
    <string name="app_name">CoronaMutualAssistance</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="trace_position_start">Trace Position Start</string>
    <string name="trace_position_stop">Trace Position Stop</string>
    <string name="infection_report">Infection Report</string>
    <string name="infection_report_cancel">Report Cancel</string>
    <string name="refresh_inflection_areas">Refresh Inflection Areas</string>
    <string name="infection_area_add">Add Inflection Area</string>
    <string name="infection_area_delete">Delete Inflection Area</string>

    <string name="infection_report_confirm_msg">Add new coronavirus infection area. is this good?</string>
    <string name="infection_report_confirm_msg_by_tracing">Add new coronavirus infection area based on historical data. is this good?</string>
    <string name="infection_area_delete_msg">Delete coronavirus infection area. is this good?</string>
    <string name="title_activity_main">CoronaMutualAssistance</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dash Board</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_msg">
        Visualize the infected area with a hit map. \n
        Be careful of problems such as personal information and damage to reputation. \n\n
        ■ Display the infection map on the dashboard. \n
        Tracking personal movement history information, if corona is infected, the infected person will reflect it on the infection map by self-report. This will help healthy people avoid the area. \n
        ■ Notice \n
        Healthy people can grasp the degree of risk to some extent by comparing the past movement history information with the infection map. Change your daily behavior to prevent the spread of infection. \n
    </string>

    <string name="unknown_location">Unknown location</string>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>


</resources>
