<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/trace_position_start"
        android:title="@string/trace_position_start"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/trace_position_stop"
        android:title="@string/trace_position_stop"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/infection_report"
        android:title="@string/infection_report"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/infection_report_cancel"
        android:title="@string/infection_report_cancel"
        app:showAsAction="collapseActionView" />

</menu>